6180 fix dashboard empty tables scroll
Updates #6180

Squashed commit of the following:

commit ad4188f6b019977977f9230b2518383c5f16ac47
Merge: 830250640 0fb6d6163
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Oct 11 15:03:55 2023 +0300

    Merge branch 'master' into ADG-7473

commit 830250640ef456c7e64561e573c7763046870f32
Author: Ildar Kamalov <ik@adguard.com>
Date:   Mon Oct 9 19:43:02 2023 +0300

    Revert "ADG-7473 get table page size from local storage"

    This reverts commit b6bf48a2690e0ea93bac621e6ddb90b172a7c3eb.

commit 960f3a1814a437f5c5945e4cc0351a59268ada40
Author: Ildar Kamalov <ik@adguard.com>
Date:   Mon Oct 9 19:42:31 2023 +0300

    fix stats config page

commit b6bf48a2690e0ea93bac621e6ddb90b172a7c3eb
Author: Ildar Kamalov <ik@adguard.com>
Date:   Mon Oct 9 19:30:22 2023 +0300

    ADG-7473 get table page size from local storage

commit 7201d00a880e4efabea9c809ce980fa1bc628c5b
Author: Ildar Kamalov <ik@adguard.com>
Date:   Mon Oct 9 17:20:48 2023 +0300

    ADG-7473 fix dashboard tables scroll

--- a/client/src/components/ui/Card.css
+++ b/client/src/components/ui/Card.css
@@ -20,7 +20,7 @@
 }
 
 .dashboard .card-table-overflow--limited {
-    max-height: 18rem;
+    max-height: 19rem;
 }
 
 .card-actions {
